<resources>
    <string name="app_name">My Application</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="UserName">Username</string>
    <string name="Password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="registerView">That is the register screen, please full fill the fields below :)</string>
    <string name="normalUser">That is the screen for normal users</string>
    <string name="adminUser">That is the screen for admin users</string>
    <string name="returnButton">Return</string>
    <string name="adminReg">Register Admin</string>

    <string-array name="time_array">
        <item>Rate</item>
        <item>10 seconds</item>
        <item>1 second</item>
        <item>0.2 seconds</item>
        <item>0.06 seconds</item>
        <item>0.02 seconds</item>
    </string-array>
    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="logout">Logout</string>
    <string name="startTracking">Start Tracking</string>
    <string name="stopTracking">Stop Tracking</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="dateTime">Date and Time</string>
    <string name="clearBut">Clear</string>
    <string name="IMUTitle">IMU Sensors Menu</string>
    <string name="gravity">Gravity Sensor</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="rotationSensor">Rotation Vector</string>
    <string name="motionSensor">Significant Motion</string>
    <string name="stepCounter">Step Counter</string>
    <string name="gyro">Gyroscope</string>
    <string name="saveButton">Save</string>
    <string name="gravityTitle">Gravity Sensor</string>
    <string name="rate">Update Rate</string>
    <string name="set">Set</string>
    <string name="imusensor">IMU Sensor</string>
    <string name="gpssensor">GPS Sensor</string>
    <string name="accelerometersensor">Accelerometer Sensor</string>
    <string name="stepTitle">Step Counter Sensor</string>
    <string name="motionTitle">Significant Motion Sensor</string>
    <string name="rotationTitle">Rotation Sensor</string>
    <string name="gyroscopeTitle">Gyroscope Sensor</string>
    <string name="shareButton">Share</string>
    <string name="fileName">Filename</string>
    <string name="tempString">Ambient Temperature</string>
    <string name="lightString">Illuminance</string>
    <string name="pressureString">Ambient Pressure</string>
    <string name="relhumString">Relative Humidity</string>
    <string name="devTempString">Device Temperature</string>
    <string name="startSensorString">Start Sensors</string>
    <string name="environmentTitleString">Environment Sensors</string>
    <string name="saveOptions">Save Options</string>
    <string name="optionTitle">Sensors Selection</string>
    <string name="optionSubtitle">Choose your Sensors</string>
    <string name="gameRotation">Game Rotation</string>
    <string name="magneticField">Magnetic Field</string>
    <string name="proximity">Proximity</string>
</resources>